--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,77 @@
-.App {
-  text-align: center;
+body {
+  background-image: url("https://images.unsplash.com/photo-1524678714210-9917a6c619c2?q=80&w=2069&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D");
+  background-repeat: no-repeat;
+  background-size: cover
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.timer {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  padding: 20px;
+  border: 1px solid #ccc;
+  width: 300px;
+  margin: 0 auto;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: bisque;
+  border-radius: 10px;
 }
 
-.App-link {
-  color: #61dafb;
+
+.display {
+  font-size: 32px;
+  font-weight: bold;
+  margin-bottom: 20px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.buttons {
+  display: flex;
+  justify-content: space-between;
+  gap: 10px; /* Add space between buttons */
+}
+
+button {
+  padding: 10px 20px;
+  border: 1px solid #ccc;
+  cursor: pointer;
+  background-color: #fff;
+  border-radius: 5px;
+  transition: all 0.2s ease-in-out;
+}
+
+button:hover {
+  background-color: #ddd; /* Change color on hover */
+}
+
+/* Animation for the Start button */
+.start-button {
+  background-color: #007bff;
+  color: #fff;
+}
+
+.start-button:hover {
+  background-color: #0069d9;
+}
+
+/* Animation for the Stop button */
+.stop-button {
+  background-color: #dc3545;
+  color: #fff;
+}
+
+.stop-button:hover {
+  background-color: #d9354f;
+}
+
+/* Animation for the Reset button */
+.reset-button {
+  background-color: #ffc107;
+  color: #fff;
+}
+
+.reset-button:hover {
+  background-color: #ffc00a;
 }
